syntax = "proto3";

message Account {
  string first_name = 1;
  string last_name = 2;
}

message CreateRequest {
  Account account = 1;
}

message CreateResponse {
  string result = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Account account = 1;
}

message UpdateRequest {
  string id = 1;
  Account account = 2;
}

message UpdateResponse {
  string result = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string result = 1;
}

service CrudService{
  rpc Create(CreateRequest) returns (CreateResponse) {};
  rpc Get(GetRequest) returns (GetResponse) {};
  rpc Update(UpdateRequest) returns (UpdateResponse) {};
  rpc Delete(DeleteRequest) returns (DeleteResponse) {};
}